# tacit_ronin

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image.yml
include/: directElevator.h  elevator.h  elevatorMode.h  elevatorStatus.h  scanElevator.h  shortestElevator.h
src/: directElevator.cpp  elevator.cpp  elevatorStatus.cpp  main.cpp  scanElevator.cpp  shortestElevator.cpp
tests/: test_elevator.cpp
